--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO = mongodb+srv://amal_ts:riEdPLC7p164AoJu@cluster0.s7cuk.mongodb.net/real-estate?retryWrites=true&w=majority
+MONGO = mongodb+srv://amal_ts:@cluster0.s7cuk.mongodb.net/real-estate?retryWrites=true&w=majority
 
 JWTPRIVATEKEY = amalts
 
@@ -10,5 +10,5 @@ HOST= smtp.gmail.com
 SERVICE= gmail
 EMAIL_PORT= 587
 SECURE= true
-USER= amalts2022@mca.sjcetpalai.ac.in
-PASS= amaltsph9645
+USER= 
+PASS= 
